--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,18 +1,12 @@
 {
-    "arrowParens": "avoid",
-    "bracketSpacing": true,
-    "insertPragma": false,
-    "jsxBracketSameLine": false,
-    "jsxSingleQuote": false,
-    "printWidth": 120,
-    "proseWrap": "never",
-    "quoteProps": "as-needed",
-    "requirePragma": false,
+    "printWidth": 80,
+    "tabWidth": 3,
+    "useTabs": false,
     "semi": true,
-    "singleQuote": false,
-    "tabWidth": 2,
-    "trailingComma": "all",
-    "useTabs": true,
-    "vueIndentScriptAndStyle": false,
-    "singleAttributePerLine": false
+    "singleQuote": true,
+    "trailingComma": "es5",
+    "bracketSpacing": true,
+    "jsxBracketSameLine": false,
+    "arrowParens": "avoid",
+    "proseWrap": "always"
 }
